# sqls-rs

./: .gitignore  Cargo.toml  README.md
builder/: Cargo.toml
builder/src/: column.rs  lib.rs  query.rs  vendor.rs
builder/src/mixin/: from.rs  into.rs  limit.rs  mod.rs  order_by.rs  returning.rs  select.rs
builder/src/queries/: _traits.rs  delete.rs  insert.rs  mod.rs  upsert.rs
builder/tests/: delete_mdl.rs  delete_raw.rs  insert_mdl.rs  insert_raw.rs  models.rs  select_mdl.rs  select_raw.rs  test_sqlx.rs  update_mdl.rs  update_raw.rs
model/: Cargo.toml
model/src/: lib.rs
model/tests/: test.rs
optional/: Cargo.toml  README.md
optional/src/: lib.rs
optional/tests/: test.rs
src/: column.rs  lib.rs  models.rs  sql.rs  types.rs  utils.rs  vendor.rs
src/mixin/: from.rs  into.rs  join.rs  limit.rs  mod.rs  offset.rs  order_by.rs  returning.rs  values.rs  where.rs
src/queries/: _traits.rs  delete.rs  insert.rs  select.rs  update.rs  upsert.rs
src/types/: column.rs  mod.rs
tests/: autogen.rs  delete.rs  insert.rs  insert_mdl.rs  insert_raw.rs  mod.rs  queries.rs  query.rs  select_mdl.rs  select_raw.rs  update_mdl.rs  update_raw.rs
