[package]
name = "builder"
version = "0.1.0"
edition = "2021"
description = """
ORM like API to "validate" the SQL syntax statically.
Allows integration with "sqlx".
"""

[lib]
name = "builder"
path = "src/lib.rs"
edition = "2021"
crate-type = ["lib"]

[features]
default = ["model"]

model = ["dep:model"]
optional = ["dep:optional"]

[dependencies.model]
path = "../model"
optional = true

[dependencies.optional]
path = "../optional"
optional = true

[dependencies]

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }