[package]
name = "builder"
version = "0.1.0"
edition = "2021"
description = """
ORM like API to "validate" the SQL syntax statically.
Allows integration with "sqlx".
"""

[lib]
name = "builder"
path = "src/lib.rs"
edition = "2021"
crate-type = ["lib"]

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "mysql"] }
optional = { path = "../optional", features = ["gql", "clone", "copy", "debug"] }
model = { path = "../model" }
dotenv = { version = "0.15.0" }