[package]
name = "optional"
version = "0.1.0"
edition = "2021"
description = """
Derive macro oriented to work with GQL & SQL.
Allows fetching arbitrary columns using "sqlx".
"""

[lib]
name = "optional"
path = "src/lib.rs"
edition = "2021"
proc-macro = true

[features]
default = ["sql", "gql"]
sql = ["dep:sqlx"]
gql = ["dep:async-graphql", "dep:convert_case", "dep:tokio"]
debug = []
clone = []
copy = []

[dependencies.sqlx]
version = "0.8.1"
optional = true

[dependencies.async-graphql]
version = "7.0.7"
optional = true

[dependencies.convert_case]
version = "0.6.0"
optional = true

[dependencies.tokio]
version = "1.39.3"
features = ["sync"]
optional = true

[dependencies]
quote = { version = "1.0.36" }
proc-macro2 = { version = "1.0.86" }
syn = { version = "2.0.72" }

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
