[package]
name = "optional"
version = "0.1.0"
edition = "2021"
description = """
Derive macro oriented to work with GQL & SQL.
Allows fetching arbitrary columns using "sqlx".
"""

[lib]
name = "optional"
path = "src/lib.rs"
edition = "2021"
proc-macro = true

[features]
default = []
debug = []
clone = []
copy = []
gql = ["dep:async-graphql", "dep:tokio", "dep:convert_case"]
sqlx = ["dep:sqlx"]

[dependencies.convert_case]
version = "0.6.0"
optional = true

[dependencies.async-graphql]
version = "7.0.7"
optional = true

[dependencies.tokio]
version = "1.39.3"
optional = true
features = ["sync"]

[dependencies.sqlx]
version = "0.8.1"
optional = true

[dependencies]
quote = { version = "1.0.36", default-features = false }
proc-macro2 = { version = "1.0.86", default-features = false }
syn = { version = "2.0.72", default-features = false, features = ["parsing", "proc-macro"] }

[dev-dependencies]
sqlx = { version = "0.8.1" }
async-graphql = { version = "7.0.7" }
convert_case = { version = "0.6.0" }